--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require-dev": {
         "php": ">=5.4.0"
     },
-    "license": "public",
+    "license": "MIT",
     "authors": [
         {
             "name": "Nazar Kaznadzey",
