--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ matrix:
     - php: nightly
 
 before_script:
-  - composer install --dev --no-interaction
+  - composer install --dev
 
 script: phpunit --configuration=tests/phpunit.xml
