--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ matrix:
     - php: nightly
 
 before_script:
-  - composer install --dev
+  - composer install --dev --no-interaction
 
 script: phpunit --configuration=tests/phpunit.xml
