--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,9 @@ matrix:
 before_script:
   - composer install --dev --no-interaction
 
-script: phpunit --configuration=tests/phpunit.xml
+script:
+  - phpunit --configuration=tests/phpunit.xml
+  - composer cover
+
+after_script:
+  - composer coveralls
