--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,7 @@ matrix:
 before_script:
   - composer install --dev --no-interaction
 
-script:
-  - phpunit --configuration=tests/phpunit.xml
-  - composer cover
+script: phpunit --configuration=tests/phpunit.xml
 
 after_script:
   - composer coveralls
