--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
         "php": ">=5.6.0"
     },
     "require-dev": {
-        "php": ">=5.6.0",
-        "phpunit/phpunit": ">=5.1.38 <6.0"
+        "phpunit/phpunit": ">=5.1.38 <6.0",
+        "php-coveralls/php-coveralls": "dev-master"
     },
     "license": "MIT",
     "authors": [
