--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,10 @@
         "psr-4": {
             "Nazz\\WebPush\\": "src/"
         }
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit -c ./tests/phpunit.xml ./tests",
+        "cover": "./vendor/bin/phpunit -c ./tests/phpunit.xml --coverage-clover .build/logs/clover.xml ./tests",
+        "coveralls": "./vendor/bin/coveralls -v"
     }
 }
